after adding cloudinary keys

--- a/.env
+++ b/.env
@@ -12,4 +12,8 @@ MONGO_URI=mongodb+srv://alenbezacharity:c95ElgTkkp4xNWCL@backenddb.s00nz.mongodb
 BCRYPT_SALT_ROUNDS=10                                
 
 # Other Configuration
-NODE_ENV=development                                  
+NODE_ENV=development  
+#CLOUDINARY                               
+CLOUDINARY_CLOUD_NAME=dhv1q36oq
+CLOUDINARY_API_KEY=956763736385885
+CLOUDINARY_API_SECRET=k6a_DJJO6nv5zGg0cnYiC4Qxlck
