--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "backend-api": "file:",
     "bcryptjs": "^2.4.3",
     "chapa-nodejs": "^1.3.1",
+    "cloudinary": "^2.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
