after addincontact with email  controller and its dependency

--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ NODE_ENV=development
 CLOUDINARY_CLOUD_NAME=dhv1q36oq
 CLOUDINARY_API_KEY=956763736385885
 CLOUDINARY_API_SECRET=k6a_DJJO6nv5zGg0cnYiC4Qxlck
+EMAILJS_SERVICE_ID=service_0me9iwe
+EMAILJS_TEMPLATE1_ID=template_gihb5sa
+EMAILJS_TEMPLATE2_ID=template_1o35wjs
+EMAILJS_USER_ID=nNuZU2qCdXRO2topE
