after addding password change route and controller and adding bot script

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ EMAILJS_SERVICE_ID=service_0me9iwe
 EMAILJS_TEMPLATE1_ID=template_gihb5sa
 EMAILJS_TEMPLATE2_ID=template_1o35wjs
 EMAILJS_USER_ID=nNuZU2qCdXRO2topE
+
+BOT_TOKEN = 1443815030:AAEyAeJWI9YK2dduAGDApb4ZqvnKDs67s08 
